--- a/styles/preview.css
+++ b/styles/preview.css
@@ -9,14 +9,84 @@
 }
 
 .vote-title {
-    margin: 2rem 0;
+    margin-top: 4rem;
     text-align: center;
 }
 
 .dates-container {
     display: flex;
     flex-direction: column;
-    row-gap: 1rem;
     font-weight: bold;
     font-size: 1.4rem;
+    margin: 3rem;
+    row-gap: 1rem;
+}
+
+.dates-container > section {
+    column-gap: 1rem;
+    text-align: center;
+}
+
+.description {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.4rem;
+    row-gap: 1rem;
+    margin: 3rem 5rem;
+    max-width: 600px;
+}
+
+.description-title {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.4rem;
+}
+
+.options-title {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.4rem;
+    margin-top: 1.5rem;
+}
+
+.back-button {
+    margin: 4rem 0;
+}
+
+.author {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: .5rem;
+    text-align: center;
+}
+
+.votes-options {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.4rem;
+    margin-top: 1.4rem;
+}
+.votes-options p {
+    font-size: 1.5rem;
+}
+
+.results-info-tip {
+    font-weight: bold;
+    margin-top: 2rem;
+    color: var(--second-color);
+}
+
+@media screen and (max-width: 480px) {
+    .dates-container > section {
+        row-gap: 1rem;
+        flex-direction: column;
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+    .dates-container > section {
+        row-gap: 1rem;
+        flex-direction: column;
+    }
 }
