created vote search

--- a/templates/pages/preview.html
+++ b/templates/pages/preview.html
@@ -23,7 +23,7 @@
         <section class="author">
             <h3>Vote created by: {{ user.name + " " + user.surname}}</h3>
             <a href="{{ url_for('user_data', id=user.id) }}" class="primary-button">
-                View author
+                View creator
             </a>
         </section>
         <section class="dates-container">
