--- a/templates/forms/creatingVote.html
+++ b/templates/forms/creatingVote.html
@@ -23,11 +23,11 @@
     </section>
     <section class="input-group">
         <p><i class="fa-solid fa-calendar-days"></i> voting start date</p>
-        <input type="date" name="startDate" aria-label="start-date-input" value="{{ values.startDate }}">
+        <input type="datetime-local" name="startDate" aria-label="start-date-input" value="{{ values.startDate }}">
     </section>
     <section class="input-group">
         <p><i class="fa-solid fa-calendar-days"></i> voting end date</p>
-        <input type="date" name="endDate" aria-label="end-date-input" value="{{ values.endDate }}">
+        <input type="datetime-local" name="endDate" aria-label="end-date-input" value="{{ values.endDate }}">
     </section>
     <section class="input-group">
         <p><i class="fa-solid fa-file"></i> description</p>
