--- a/templates/pages/main.html
+++ b/templates/pages/main.html
@@ -2,9 +2,111 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Main page - E-voting app
+    Search - E-voting app
+{% endblock %}
+
+{% block head %}
+    <link rel="stylesheet" href="{{ url_for('get_style', styleFile='main') }}">
 {% endblock %}
 
 {% block header %}
     {% include "components/navbar.html" %}
+{% endblock %}
+
+{% block main %}
+<section class="main-container">
+    <section style="margin-top: 2rem;">
+        <h1>Search votes</h1>
+        <div class="primary-spliter"></div>
+    </section>
+    <form class="search" method="get">
+        <section class="options">
+            <section class="input-group">
+                <p>Title</p>
+                <input type="text" name="titleFilter" aria-label="title filter input" placeholder="Filter by title" value="{{ request.args.get('titleFilter', '') }}">
+            </section>
+            <section class="input-group">
+                <p>Vote status</p>
+                <select name="statusFilter" class="primary-select" aria-label="status filter input">
+                    <option value="In progress" {{ 'selected' if request.args.get("statusFilter") == 'In progress' or request.args.get("statusFilter") == '' }}>In progress</option>
+                    <option value="Waiting" {{ 'selected' if request.args.get("statusFilter") == 'Waiting' }}>Waiting</option>
+                    <option value="Ended" {{ 'selected' if request.args.get("statusFilter") == 'Ended' }}>Ended</option>
+                </select>
+            </section>
+            <section class="input-group">
+                <p>After start date</p>
+                <input type="datetime-local" name="startDateFilter" aria-label="start date after filter input" value="{{ request.args.get('startDateFilter', '') }}">
+            </section>
+            <section class="input-group">
+                <p>Before end date</p>
+                <input type="datetime-local" name="endDateFilter" aria-label="end date before input" value="{{ request.args.get('endDateFilter', '') }}">
+            </section>
+        </section>
+        <section class="flex-center">
+            <button type="submit" class="primary-button">
+                <span class="ts-md" aria-hidden="true">
+                    <i class="fa-solid fa-magnifying-glass"></i> Search
+                </span>
+            </button>
+        </section>
+    </form>
+    {% if votes %}
+                <section style="margin-top: 3rem;margin-bottom: 3rem;" class="votes-grid">
+                {% for element in votes %}
+                    <section class="vote-container">
+                        <section class="{{ 'success-message' if element.status == 'In progress' else 'warning-message' if element.status == 'Waiting' else 'error-message' }}" style="text-align: center;">
+                            <h3>{{ element.status }}</h3>
+                        </section>
+                        {% if element.status == "Ended" %}
+                            <section class="success-message" style="text-align: center;">
+                                <h3>Winner: {{ (element.options|max(attribute='votingCount')).name }}</h3>
+                            </section>
+                        {% endif %}
+                        <section>
+                            <h2 style="text-align: center;">{{ element.title }}</h2>
+                            <div class="primary-spliter"></div>
+                        </section>
+                        <section class="flex-center" style="flex-direction: column;">
+                            <h3 style="text-align: center;margin: 1rem 0;">Created by: {{ element.user.name + " " + element.user.surname}}</h3>
+                            <a href="{{ url_for('user_data', id=element.user.id) }}">
+                                <button class="primary-button">View Profile</button>
+                            </a>
+                        </section>
+                        <section class="flex-center vote-options-container" >
+                            <p>{{ element.startDate }} - {{ element.endDate }}</p>
+                        </section>
+                        <section class="vote-options-container">
+                            <h3>Vote options</h3>
+                            {% for voteOption in element.options %}
+                                <ul>
+                                    {% if element.realTimeResults or element.status == "Ended" %}
+                                        <li><span style="font-weight: 700;">{{ voteOption.name[:30] + "..." if voteOption.name|length > 30 else voteOption.name }}</span> votes: {{ voteOption.votingCount }}</li>
+                                    {% else %}
+                                        <li><span style="font-weight: 700;">{{ voteOption.name[:30] + "..." if voteOption.name|length > 30 else voteOption.name }}</span></li>
+                                    {% endif %}
+                                </ul>
+                            {% endfor %}
+                        </section>
+                        <section class="vote-options-container">
+                            <h3>Description</h3>
+                            <p>{{ element.description[:100] + "..." if element.description|length > 100 else element.description }}</p>
+                        </section>
+                        <section class="vote-options-container">
+                            <h3>Real time results: {{ 'YES' if element.realTimeResults else 'NO' }}</h3>
+                        </section>
+                        <section class="vote-options-container">
+                            <h3>Actions</h3>
+                            <section class="flex-center" style="justify-content: space-around;">
+                                <a href="{{ url_for('preview', idVote=element.id, originPage='main_page') }}" class="primary-button">
+                                    Preview
+                                </a>
+                            </section>
+                        </section>
+                    </section>
+                {% endfor %}
+            </section>
+            {% else %}
+                <h1 style="text-align: center;margin-top: 3rem;">You have nothing there!</h1>
+            {% endif %}
+</section>
 {% endblock %}
