--- a/templates/pages/votes.html
+++ b/templates/pages/votes.html
@@ -77,7 +77,7 @@
                         </section>
                         <section class="vote-options-container">
                             <h3>Vote options</h3>
-                            {% for voteOption in element.options %}
+                            {% for voteOption in element.options|sort(attribute='name') %}
                                 <ul>
                                     {% if element.realTimeResults or element.status == "Ended" %}
                                         <li><span style="font-weight: 700;">{{ voteOption.name[:30] + "..." if voteOption.name|length > 30 else voteOption.name }}</span> votes: {{ voteOption.votingCount }}</li>
